<resources>
    <string name="app_name">ParkingBookingSystem</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="menu_profile_detail">My Profile</string>
    <string name="menu_delete">Delete</string>
    <string name="title_welcome_user">Welcome to Parking Booking System</string>
    <string name="title_user_name">Welcome</string>
    <string name="title_user_detail">My Detail</string>
    <string name="title_booking_detail">Booking Detail</string>
    <string name="title_user_Feedback">Feedback</string>
    <string name="title_slot">Slot</string>
    <string name="title_add_plot">Add Plot</string>
    <string name="title_add_slot">Add Slot</string>
    <string name="text_button_new_booking">New Booking</string>
    <string name="text_button_view_parking">View Parking</string>
    <string name="text_button_view_user">View User</string>
    <string name="text_button_view_booking">View Booking</string>
    <string name="text_Feedback">Feed Back</string>
    <string name="text_button_plot">Plot</string>
    <string name="text_button_slot">Slot</string>
    <string name="text_button_search">Search</string>
    <string name="text_button_submit">Submit</string>
    <string name="text_button_cancel">Cancel</string>
    <string name="area">Area</string>
    <string name="text_label_user_name">Name</string>
    <string name="text_label_user_phone">Phone</string>
    <string name="text_label_user_email">Email ID</string>
    <string name="text_label_valid_booking_id">Valid Bookings</string>
    <string name="text_label_plot">Plot</string>
    <string name="text_label_plot_num">Plot Number</string>
    <string name="text_label_slot">Slot</string>
    <string name="text_label_id">ID</string>
    <string name="text_label_date">Date</string>
    <string name="date_picker_title">Date of Parking:</string>
    <string name="time_picker_title">Time of Parking:</string>
    <string name="ok">OK</string>
    <string name="edit_text_plot_name">Plot Name</string>
    <string name="edit_text_slot_name">Slot Name</string>
    <string name="edit_text_number_of_area">Number of Area</string>
    <string name="edit_text_number_of_slots">Number of Slots</string>
    <string name="dialog_plot_operation">Choose Operation</string>
    <string name="toast_plot_add_successfull">Plot Added Successfully</string>
    <string name="label_edit_text_time">Time of Parking:</string>
    <string name="label_edit_text_date">Date of Parking:</string>
    <string name="label_edit_text_hours">Hours of Parking:</string>
    <string name="area_num">Area %1$d</string>
    <string name="booking_hour">%1$d</string>
    <string name="booking_deleted">Booking Deleted</string>

</resources>
