<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:id="@+id/title_admin"
        style="@style/Heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_vertical_margin"
        android:layout_marginTop="@dimen/button_vertical_margin"
        android:text="@string/title_welcome_user"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/button_view_parking"
        style="@style/LinearLayoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_vertical_margin"
        android:layout_marginLeft="@dimen/button_horizontal_margin"
        android:layout_marginRight="@dimen/button_horizontal_margin"
        android:layout_marginTop="@dimen/button_vertical_margin"
        android:text="@string/text_button_view_parking"/>

    <Button
        android:id="@+id/button_view_booking"
        style="@style/LinearLayoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_vertical_margin"
        android:layout_marginLeft="@dimen/button_horizontal_margin"
        android:layout_marginRight="@dimen/button_horizontal_margin"
        android:layout_marginTop="@dimen/button_vertical_margin"
        android:text="@string/text_button_view_booking"/>

    <Button
        android:id="@+id/button_view_user"
        style="@style/LinearLayoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_vertical_margin"
        android:layout_marginLeft="@dimen/button_horizontal_margin"
        android:layout_marginRight="@dimen/button_horizontal_margin"
        android:layout_marginTop="@dimen/button_vertical_margin"
        android:text="@string/text_button_view_user"/>

    <Button
        android:id="@+id/button_feedback"
        style="@style/LinearLayoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_vertical_margin"
        android:layout_marginLeft="@dimen/button_horizontal_margin"
        android:layout_marginRight="@dimen/button_horizontal_margin"
        android:layout_marginTop="@dimen/button_vertical_margin"
        android:text="@string/text_Feedback"/>


</LinearLayout>