<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/list_item_date"
        style="@style/SubHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_padding"
        android:paddingLeft="@dimen/button_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_padding"
        android:paddingTop="@dimen/activity_vertical_padding"
        android:text="@string/text_label_valid_booking_id" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/list_item_booking_area"
            style="@style/DefaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/button_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_padding"
            android:text="@string/text_label_plot" />

        <TextView
            android:id="@+id/list_time"
            style="@style/DefaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/button_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_padding"
            android:text="@string/text_label_date"
            android:textStyle="normal|italic" />
    </LinearLayout>

</LinearLayout>