<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

        <TextView
            android:id="@+id/title_add_plot"
            style="@style/Heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_padding"
            android:layout_marginLeft="@dimen/activity_horizontal_padding"
            android:layout_marginRight="@dimen/activity_horizontal_padding"
            android:layout_marginTop="@dimen/activity_vertical_padding"
            android:text="@string/title_add_plot"
            android:textAlignment="center" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/view_edittext_layout_plot_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/edit_text_plot_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_padding"
                    android:layout_marginLeft="@dimen/activity_horizontal_padding"
                    android:layout_marginRight="@dimen/activity_horizontal_padding"
                    android:layout_marginTop="@dimen/activity_vertical_padding"
                    android:ems="10"
                    android:hint="@string/edit_text_plot_name"
                    android:inputType="textPersonName"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/view_edittext_layout_text_plot_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/edit_text_plot_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_padding"
            android:layout_marginLeft="@dimen/activity_horizontal_padding"
            android:layout_marginRight="@dimen/activity_horizontal_padding"
            android:layout_marginTop="@dimen/activity_vertical_padding"
            android:ems="10"
            android:hint="@string/edit_text_number_of_slots"
            android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_submit"
            style="@style/LinearLayoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/button_horizontal_margin"
            android:layout_marginLeft="@dimen/button_horizontal_margin"
            android:layout_marginRight="@dimen/button_horizontal_margin"
            android:layout_marginTop="@dimen/button_horizontal_margin"
            android:text="@string/text_button_submit" />

    </LinearLayout>
