<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--TODO: Change Date Picker and Time Picker Button into clickable text fields-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_vertical_padding"
                    android:paddingLeft="@dimen/activity_horizontal_padding"
                    android:paddingRight="@dimen/activity_horizontal_padding"
                    android:paddingTop="@dimen/activity_vertical_padding"
                    android:text="@string/label_edit_text_time"/>

                <EditText
                    android:id="@+id/TimePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="9:45 PM"
                    android:inputType="time"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_vertical_padding"
                    android:paddingLeft="@dimen/activity_horizontal_padding"
                    android:paddingRight="@dimen/activity_horizontal_padding"
                    android:paddingTop="@dimen/activity_vertical_padding"
                    android:text="@string/label_edit_text_date"/>

                <EditText
                    android:id="@+id/DatePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Saturday,July 29,2017"
                    android:inputType="date"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:paddingBottom="@dimen/activity_vertical_padding"
                    android:paddingLeft="@dimen/activity_horizontal_padding"
                    android:paddingRight="@dimen/activity_horizontal_padding"
                    android:paddingTop="@dimen/activity_vertical_padding"
                    android:text="@string/label_edit_text_hours"/>
            <EditText
                android:id="@+id/number_picker_hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
            </LinearLayout>


            <Button
                android:id="@+id/button_search"
                style="@style/LinearLayoutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/button_vertical_margin"
                android:layout_marginLeft="@dimen/button_horizontal_margin"
                android:layout_marginRight="@dimen/button_horizontal_margin"
                android:layout_marginTop="@dimen/button_vertical_margin"
                android:text="@string/text_button_search" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_area"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"/>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</LinearLayout>